# legend-juju-libs

./: .gitignore  NOTICE  README.md  metadata.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci.yaml
finos_legend_operator/: base_operator.py  constants.py  container_utils.py  operator.py  utils.py
lib/charms/finos_legend_db_k8s/v0/: legend_database.py
lib/charms/finos_legend_gitlab_integrator_k8s/v0/: legend_gitlab.py
lib/charms/finos_legend_libs/v0/: legend_operator_base.py  legend_operator_testing.py
src/: __init__.py
unit_tests/: __init__.py  test_base_operator.py  test_legend_operator_base.py  test_utils.py
