[metadata]
name = finos_legend_operator_lib
summary = Common Library for FINOS Legend Juju Charms using Ops framework.
version = 0.0.1
description-file =
    README.md
author = Canonical
author-email = charmcraft@lists.launchpad.net
url = https://github.com/canonical/finos-legend-libs
classifier =
    Intended Audience :: Developers
    Topic :: System
    Topic :: System :: Installation/Setup
    opic :: System :: Software Distribution
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    License :: OSI Approved :: Apache Software License
